apply plugin: 'java-library'
apply plugin: 'java'
apply from: '../jitpack.gradle'


java {
    withSourcesJar()
    withJavadocJar()
}

publishing {
    publications {
        maven(MavenPublication) {
            from components.java
        }
    }
}

dependencies {
    implementation project(':stone_lib')

    implementation "com.google.auto.service:auto-service:1.0.1"
    annotationProcessor "com.google.auto.service:auto-service:1.0.1"

    //  incap
    implementation "net.ltgt.gradle.incap:incap:0.3"
    implementation "net.ltgt.gradle.incap:incap-processor:0.3"

    // squareup - кодогенерация
    implementation "com.squareup:javapoet:1.13.0"
}


java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}